--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Vocabulary Study Sesh</title>
 </head>
 <body>
-  
+  <div id="login-form-container"></div>
   <div id="app"></div>
 </body>
 </html>
